--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,61 +1,167 @@
 .home {
 
-  .content-section {
-    margin: 30px 0;
+  @media @mobile {
+    padding: 0 5%;
+  }
+
+  header {
     display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
+    flex-direction: column;
+    width: 100%;
 
-   
-    
-    .text-content {
-      width: 48%;
-      padding-right: 1%;
-    }
+    img,
+    h2,
+    p {
+      display: flex;
+      flex-direction: column;
+      max-width: 800px;
+      align-self: center;
 
-    .img-content {
-      width: 48%;
-      padding-left: 1%;
-
-      img {
-        border-radius: 10px;
+      @media @mobile {
+        max-width: 98%;
       }
     }
-  }
 
-  .inverse-content {
-    padding-bottom: 30px;
-    border-bottom: 2px dashed @navigation-border;
-
-    .text-content {
-      padding-left: 1%;
-      padding-right: 0;
+    h2 {
+      align-self: flex-start;
     }
 
-    .img-content {
-      padding-right: 1%;
-      padding-left: 0;
+    p {
+      padding-bottom: 2%;
+      border-bottom: 2px dashed @navigation-border;
+    }
+
+    img {
+      margin-bottom: 2%;
     }
   }
 
-  .content-destination {
-    width: 75%;
-    margin: 0 auto 30px;
+}
+
+
+
+.content-section {
+  margin: 30px 0;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+
+
+
+  .text-content {
+    width: 48%;
+    padding-right: 1%;
+  }
+
+  .img-content {
+    width: 48%;
+    padding-left: 1%;
 
     img {
       border-radius: 10px;
     }
   }
 
-  .content-pick {
-    padding-top: 30px;
-    border-top: 2px dashed @navigation-border;
-    display: flex;
-    justify-content: space-between;
 
-    .destination {
-      width: 30%;
-      margin-bottom: 30px;
+  @media @mobile {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    align-self: center;
+
+    .text-content,
+    .img-content,
+    h2 {
+      display: flex;
+      flex-direction: column;
+      align-self: center;
+      width: 100%;
     }
   }
-}// home
+}
+
+
+.inverse-content {
+  padding-bottom: 30px;
+  border-bottom: 2px dashed @navigation-border;
+
+  @media @mobile {
+    display: flex;
+    flex-direction: column-reverse;
+    width: 100%;
+    align-self: center;
+
+    .text-content,
+    .img-content,
+    h2 {
+      display: flex;
+      flex-direction: column;
+      align-self: center;
+      width: 100%;
+
+
+    }
+  }
+
+  .text-content {
+    padding-left: 1%;
+    padding-right: 0;
+  }
+
+  .img-content {
+    padding-right: 1%;
+    padding-left: 0;
+  }
+
+
+}
+
+
+
+.content-destination {
+  width: 75%;
+  margin: 0 auto 30px;
+
+  img {
+    border-radius: 10px;
+  }
+}
+
+.content-pick {
+  padding-top: 30px;
+  border-top: 2px dashed @navigation-border;
+  display: flex;
+  justify-content: space-between;
+
+  .destination {
+    width: 30%;
+    margin-bottom: 30px;
+  }
+
+  .btn {
+    button {
+      .bttn(@button-bg, @main-bg);
+    }
+  }
+
+}
+
+
+@media @mobile {
+
+  .content-pick {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+
+    .destination {
+      width: 80%;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+
+
+    }
+  }
+
+}
