--- a/less/mixins.less
+++ b/less/mixins.less
@@ -1,1 +1,12 @@
 // Mixins in here
+.bttn(@button-bg,@main-bg) {
+
+    border-radius: 12px;
+    background-color: @button-bg;
+    color: @main-bg;
+    width: 85%;
+    height: 60px;
+    font-size: 1.75em;
+}
+
+
