--- a/less/navigation.less
+++ b/less/navigation.less
@@ -38,21 +38,21 @@
         display: flex;
         flex-direction: column;
         width: 100%;
-        padding: 3%;
-        ;
+        padding: 3%;;
         justify-content: center;
 
 
-        nav,
-        h1 {
+        nav, h1 {
             width: 100%;
-            display: flex;
+            display:flex;
             justify-content: space-evenly;
-            border: 1px solid;
+            border:1px solid;
             align-self: center;
- 
-
+            
         }
 
+        a{
+
+        }
     }
 }
